# Robotics

install/: local_setup.sh  setup.sh
install/mujoco_arm_demo/lib/mujoco_arm_demo/: simple_move_node
install/mujoco_arm_demo/share/mujoco_arm_demo/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/mujoco_arm_demo/share/mujoco_arm_demo/launch/: demo.launch.py
install/mujoco_ros2/lib/mujoco_ros2/: mujoco_node
install/mujoco_ros2/share/ament_index/resource_index/package_run_dependencies/: mujoco_ros2
install/mujoco_ros2/share/ament_index/resource_index/parent_prefix_path/: mujoco_ros2
install/mujoco_ros2/share/mujoco_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/mujoco_ros2/share/mujoco_ros2/cmake/: mujoco_ros2Config-version.cmake  mujoco_ros2Config.cmake
install/mujoco_ros2/share/mujoco_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/mujoco_ros2/share/mujoco_ros2/launch/: example.py
install/mujoco_ros2/share/mujoco_ros2/model/: low_cost_robot_arm.xml  scene.xml  two_link_planar.xml
install/mujoco_ros2/share/mujoco_ros2/model/assets/: base_link.stl  (+21 more)
log/: latest_build
ms2/: MS2.docx  movment.py  ms2.mkv
ms3/: Velocity_Acceleration_Kinematics_Analysis_Report.docx  ms3_log.csv  script.py
ms3/Milestone_03/: ms3_log.csv
ms4/: ms4_trajectories_log.csv  script.py
scripts/: wave_arm.py
src/mujoco_arm_demo/: setup.cfg  setup.py
src/mujoco_arm_demo/mujoco_arm_demo/: simple_move_node.py
vods/: ms1.mkv
