<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_arm_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yahiaamr90@gmail.com">yahia</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
   <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


<!-- <package format="3">
  <name>mujoco_arm_demo</name>
  <version>0.0.1</version>
  <description>Simple Mujoco simulation integrated with ROS 2</description>

  <maintainer email="YOUR_EMAIL@example.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> -->
